@@ -448,9 +448,9 @@ public class XmlEncoder extends XmlUtil {
         addDelegateForClass(Color.class, new XmlDelegateImpl() {
             public Element createElement(XmlEncoder e, Object o) {
                 Color color = (Color) o;
-                List args = Misc.newList(new Integer(color.getRed()),
-                                         new Integer(color.getGreen()),
-                                         new Integer(color.getBlue()));
+                List args = Misc.newList(Integer.valueOf(color.getRed()),
+                                         Integer.valueOf(color.getGreen()),
+                                         Integer.valueOf(color.getBlue()));
                 List types = Misc.newList(Integer.TYPE, Integer.TYPE,
                                           Integer.TYPE);
                 return e.createObjectConstructorElement(o, args, types);
@@ -460,9 +460,9 @@ public class XmlEncoder extends XmlUtil {
         addDelegateForClass(Rectangle.class, new XmlDelegateImpl() {
             public Element createElement(XmlEncoder e, Object o) {
                 Rectangle r = (Rectangle) o;
-                List args = Misc.newList(new Integer(r.x), new Integer(r.y),
-                                         new Integer(r.width),
-                                         new Integer(r.height));
+                List args = Misc.newList(Integer.valueOf(r.x),  Integer.valueOf(r.y),
+                                         Integer.valueOf(r.width),
+                                         Integer.valueOf(r.height));
                 List types = Misc.newList(Integer.TYPE, Integer.TYPE,
                                           Integer.TYPE, Integer.TYPE);
                 return e.createObjectConstructorElement(o, args, types);
@@ -473,9 +473,9 @@ public class XmlEncoder extends XmlUtil {
         addDelegateForClass(Rectangle2D.Double.class, new XmlDelegateImpl() {
             public Element createElement(XmlEncoder e, Object o) {
                 Rectangle2D.Double r = (Rectangle2D.Double) o;
-                List args = Misc.newList(new Double(r.x), new Double(r.y),
-                                         new Double(r.width),
-                                         new Double(r.height));
+                List args = Misc.newList(  Double.valueOf(r.x),   Double.valueOf(r.y),
+                                           Double.valueOf(r.width),
+                                           Double.valueOf(r.height));
                 List types = Misc.newList(Double.TYPE, Double.TYPE,
                                           Double.TYPE, Double.TYPE);
                 return e.createObjectConstructorElement(o, args, types);
@@ -484,9 +484,9 @@ public class XmlEncoder extends XmlUtil {
         addDelegateForClass(Rectangle2D.Float.class, new XmlDelegateImpl() {
             public Element createElement(XmlEncoder e, Object o) {
                 Rectangle2D.Float r = (Rectangle2D.Float) o;
-                List args = Misc.newList(new Float(r.x), new Float(r.y),
-                                         new Float(r.width),
-                                         new Float(r.height));
+                List args = Misc.newList(  Float.valueOf(r.x),   Float.valueOf(r.y),
+                                           Float.valueOf(r.width),
+                                           Float.valueOf(r.height));
                 List types = Misc.newList(Float.TYPE, Float.TYPE, Float.TYPE,
                                           Float.TYPE);
                 return e.createObjectConstructorElement(o, args, types);
@@ -496,8 +496,8 @@ public class XmlEncoder extends XmlUtil {
         addDelegateForClass(Point.class, new XmlDelegateImpl() {
             public Element createElement(XmlEncoder e, Object o) {
                 Point p     = (Point) o;
-                List  args  = Misc.newList(new Integer(p.x),
-                                           new Integer(p.y));
+                List  args  = Misc.newList(  Integer.valueOf(p.x),
+                                             Integer.valueOf(p.y));
                 List  types = Misc.newList(Integer.TYPE, Integer.TYPE);
                 return e.createObjectConstructorElement(o, args, types);
             }
@@ -506,8 +506,8 @@ public class XmlEncoder extends XmlUtil {
         addDelegateForClass(Dimension.class, new XmlDelegateImpl() {
             public Element createElement(XmlEncoder e, Object o) {
                 Dimension p = (Dimension) o;
-                List args = Misc.newList(new Integer(p.width),
-                                         new Integer(p.height));
+                List args = Misc.newList(  Integer.valueOf(p.width),
+                                           Integer.valueOf(p.height));
                 List types = Misc.newList(Integer.TYPE, Integer.TYPE);
                 return e.createObjectConstructorElement(o, args, types);
             }
@@ -517,8 +517,8 @@ public class XmlEncoder extends XmlUtil {
             public Element createElement(XmlEncoder e, Object o) {
                 Font f = (Font) o;
                 List args = Misc.newList(f.getName(),
-                                         new Integer(f.getStyle()),
-                                         new Integer(f.getSize()));
+                                           Integer.valueOf(f.getStyle()),
+                                           Integer.valueOf(f.getSize()));
                 List types = Misc.newList(String.class, Integer.TYPE,
                                           Integer.TYPE);
                 return e.createObjectConstructorElement(o, args, types);
@@ -528,7 +528,7 @@ public class XmlEncoder extends XmlUtil {
         addDelegateForClass(Date.class, new XmlDelegateImpl() {
             public Element createElement(XmlEncoder e, Object o) {
                 Date p     = (Date) o;
-                List args  = Misc.newList(new Long(p.getTime()));
+                List args  = Misc.newList( Long.valueOf(p.getTime()));
                 List types = Misc.newList(Long.TYPE);
                 return e.createObjectConstructorElement(o, args, types);
             }
@@ -1788,7 +1788,7 @@ public class XmlEncoder extends XmlUtil {
         try {
             Class arrayType = getClass(element.getAttribute(ATTR_CLASS));
             int length =
-                new Integer(element.getAttribute(ATTR_LENGTH)).intValue();
+                    Integer.parseInt(element.getAttribute(ATTR_LENGTH));
             Object   array    = Array.newInstance(arrayType, length);
             NodeList children = XmlUtil.getElements(element);
             for (int i = 0; i < children.getLength(); i++) {
@@ -1862,7 +1862,7 @@ public class XmlEncoder extends XmlUtil {
                 return new ObjectClass(
                     deserialize(XmlUtil.decodeBase64(value)));
             } else {
-                int length = new Integer(lengthStr).intValue();
+                int length = Integer.parseInt(lengthStr);
                 array = Array.newInstance(arrayType, length);
 
                 /**
@@ -2005,7 +2005,7 @@ public class XmlEncoder extends XmlUtil {
             //Character is special handling because it does not take a String
             if (className.equals("char")
                     || className.equals("java.lang.Character")) {
-                return new Character(value.charAt(0));
+                return  Character.valueOf(value.charAt(0));
             }
         } catch (Exception exc) {
             //Check for Double or Long objects with NaN, Infinity or -Infinity
@@ -2013,24 +2013,24 @@ public class XmlEncoder extends XmlUtil {
             if (exc instanceof java.lang.reflect.InvocationTargetException) {
                 if (value.equals("NaN")) {
                     if (primitiveClass.equals(Double.class)) {
-                        return new Double(Double.NaN);
+                        return Double.valueOf(Double.NaN);
                     }
                     if (primitiveClass.equals(Float.class)) {
-                        return new Float(Float.NaN);
+                        return Float.valueOf(Float.NaN);
                     }
                 } else if (value.equals("Infinity")) {
                     if (primitiveClass.equals(Double.class)) {
-                        return new Double(Double.POSITIVE_INFINITY);
+                        return Double.valueOf(Double.POSITIVE_INFINITY);
                     }
                     if (primitiveClass.equals(Float.class)) {
-                        return new Float(Float.POSITIVE_INFINITY);
+                        return Float.valueOf(Float.POSITIVE_INFINITY);
                     }
                 } else if (value.equals("-Infinity")) {
                     if (primitiveClass.equals(Double.class)) {
-                        return new Double(Double.NEGATIVE_INFINITY);
+                        return Double.valueOf(Double.NEGATIVE_INFINITY);
                     }
                     if (primitiveClass.equals(Float.class)) {
-                        return new Float(Float.NEGATIVE_INFINITY);
+                        return Float.valueOf(Float.NEGATIVE_INFINITY);
                     }
                 }
             }
@@ -2577,7 +2577,7 @@ public class XmlEncoder extends XmlUtil {
         } catch (IllegalAccessException iae) {
             ctorOk = false;
         }
-        classCtorsOk.put(theClass, new Boolean(ctorOk));
+        classCtorsOk.put(theClass, Boolean.valueOf(ctorOk));
         return ctorOk;
     }
 
